# enum-flag-set

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.hooks/: pre-commit-clang-format
cmake/: build_type.cmake  compiler_id.cmake  git_hooks.cmake  verbose.cmake
include/: flag_set.hpp  use_flags.hpp
test/: CMakeLists.txt  test_flag_set.cpp
